--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section class="container-fluid">
         <div class="row">
             <div class="col-3">
+<!---->
                 <div class="chat">
                     <div class="profile">
                         <figure>
@@ -33,9 +34,14 @@
                         <i class="fa-regular fa-message"></i>
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                </div>
-
-                <!---->
+                </div><hr>
+<!---->
+                <div class="button">
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                        <button class="btn btn-primary" type="button">Nuevo Chat</button>
+                    </div>
+                </div><hr>
+<!---->
                 <div class="profile">
                     <figure>
                         <img src="./assets/img/img2.jpg" alt="">
@@ -108,10 +114,19 @@
                         <p>Activo ahora</p>
                     </div>
                 </div>
-
-            </div>
+<!---->
+        </div>
             <div class="col-9">
-
+                <div class="titulo">
+                    <figure>
+                        <img src="./assets/img/hand.png" alt="">
+                    </figure>
+                    <h1>
+                        Comienza el Networking
+                    </h1>
+                    Presiona el boton<b>"Nuevo Chat"</b> para comenzar a crear nuevas <br> redes de contacto para tu empresa o emprendimiento
+                </div>
+            
             </div>
         </div>
     </section>
