--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
                 </div><hr>
 <!---->
                 <div class="button">
-                    <div class="d-grid gap-2 col-6 mx-auto">
-                        <button class="btn btn-primary" type="button">Nuevo Chat</button>
-                    </div>
+                    <button> <a href="#"></a> Nuevo Chat</button>
                 </div><hr>
 <!---->
                 <div class="profile">
@@ -48,7 +46,7 @@
                     </figure>
                     <div class="texto">
                         <h5>Sofia</h5>  
-                        <p>Activo ahora</p>
+                        <p>Estas solo? ❤️</p>
                     </div>
                 </div><hr>
                 <div class="profile">
@@ -57,7 +55,7 @@
                     </figure>
                     <div class="texto">
                         <h5>Vale</h5>  
-                        <p>Activo ahora</p>
+                        <p>Vamos a la playa?</p>
                     </div>
                 </div><hr>
                 <div class="profile">
@@ -66,7 +64,7 @@
                     </figure>
                     <div class="texto">
                         <h5>Javier</h5>  
-                        <p>Activo ahora</p>
+                        <p>Te acuerdas que hiciste ayer ?</p>
                     </div>
                 </div><hr>
                 <div class="profile">
@@ -75,7 +73,7 @@
                     </figure>
                     <div class="texto">
                         <h5>Joako</h5>  
-                        <p>Activo ahora</p>
+                        <p>Eso es lo que teni po´</p>
                     </div>
                 </div><hr>
                 <div class="profile">
@@ -84,7 +82,7 @@
                     </figure>
                     <div class="texto">
                         <h5>Sebafit</h5>  
-                        <p>Activo ahora</p>
+                        <p>Hoy se entrena perro 🏊‍♀️</p>
                     </div>
                 </div><hr>
                 <div class="profile">
@@ -93,7 +91,7 @@
                     </figure>
                     <div class="texto">
                         <h5>Aldo</h5>  
-                        <p>Activo ahora</p>
+                        <p>Prestame 10 lucas porfa 🙃</p>
                     </div>
                 </div><hr>
                 <div class="profile">
@@ -102,7 +100,7 @@
                     </figure>
                     <div class="texto">
                         <h5>JC</h5>  
-                        <p>Activo ahora</p>
+                        <p>No voy mas, estoy chato</p>
                     </div>
                 </div><hr>
                 <div class="profile">
@@ -111,7 +109,7 @@
                     </figure>
                     <div class="texto">
                         <h5>Daniela</h5>  
-                        <p>Activo ahora</p>
+                        <p>vc acredita isso irmao?</p>
                     </div>
                 </div>
 <!---->
@@ -119,7 +117,7 @@
             <div class="col-9">
                 <div class="titulo">
                     <figure>
-                        <img src="./assets/img/hand.png" alt="">
+                        <img class="img-titulo" src="./assets/img/hand.png" alt="">
                     </figure>
                     <h1>
                         Comienza el Networking
